syntax = "proto3";

package controlplane;

option go_package="/controlplane";

service ControlPlane{
  rpc RegisterBreakpoint(RegisterBreakPointRequest) returns (RegisterBreakPointResponse);
  rpc ListBreakpoints(ListBreakpointsRequest) returns (ListBreakpointsResponse);
  rpc DeleteBreakPoint(DeleteBreakPointRequest) returns (DeleteBreakPointResponse);
  rpc GetSnapshot(GetSnapshotRequest) returns (GetSnapshotResponse);
  rpc StreamTraces(StreamTracesRequest) returns (stream TraceEvent);
  rpc FreezeTrace(FreezeTraceRequest) returns (FreezeTraceResponse);
  rpc GetFreezeStatus(GetFreezeStatusRequest) returns (GetFreezeStatusResponse);
  rpc ReleaseTrace(ReleaseTraceRequest) returns (ReleaseTraceResponse);
  rpc ListActiveFreezes(ListActiveFreezesRequest) returns (ListActiveFreezesResponse);
}

message Breakpoint{
  string id=1;
  string service_name=2;
  string endpoint=3;
  map<string,string> conditions=4;
  bool enabled=5;
  int64 created_at=6;
}

message RegisterBreakPointRequest{
  string service_name=1;
  string endpoint=2;
  map<string,string> conditions=3;
}

message RegisterBreakPointResponse{
  string breakpoint_id=1;
  bool success=2;
  string resp_message=3;
}

message ListBreakpointsRequest{}

message ListBreakpointsResponse{
  repeated Breakpoint breakpoints=1;
}

message DeleteBreakPointRequest{
  string breakpoint_id=1;
}

message DeleteBreakPointResponse{
  bool success=1;
  string resp_message=2;
}

message GetSnapshotRequest{
  string trace_id=1;
}

message GetSnapshotResponse{
  string trace_id=1;
  string snapshot_data=2; //Serialized JSON
  bool success=3;
  string resp_message=4;
}

message StreamTracesRequest{}

message TraceEvent{
  string trace_id=1;
  string service_name=2;
  string endpoint=3;
  int64 timestamp=4;
  map<string,string> attributes=5;
}

message FreezeTraceRequest{
  string traceId=1;
  repeated string services=2;
}

message FreezeTraceResponse{
  bool success=1;
  string resp_message=2;
  string state=3;
}


message GetFreezeTraceRequest{
  string traceId=1;
}

message GetFreezeTraceResponse{
  bool success=1;
  string resp_message=2;
  string state=3;
}


message ReleaseTraceRequest{
  string traceId=1;
}

message ReleaseTraceResponse{
  bool success=1;
  string resp_message=2;
}

message GetFreezeStatusRequest{
  string traceId=1;
}

message GetFreezeStatusResponse{
  string traceId=1;
  string state=2;
  repeated string services=3;
  int64 frozenAt=4;
  string breakpointId=5;
}

message FreezeInfo{
  string traceId=1;
  string state=2;
  repeated string services=3;
  int64 frozenAt=4;
}

message ListActiveFreezesRequest{}
message ListActiveFreezesResponse{
  repeated FreezeInfo freezes=1;
}
